<resources>
    <string name="app_name">gymcoachbob</string>
    <string name="app_directory_name">gymcoachbob</string>

    <string name="hint_exercise_name">exercise name</string>

    <string name="title_activity_add_exercise">Add exercise</string>
    <string name="title_activity_new_session">Add exercise set</string>

    <string name="action_new_exercise">New exercise</string>
    <string name="action_new_session">New set</string>
    <string name="action_export_exercises">Export exercises</string>
    <string name="action_import_exercises">Import exercises</string>

    <string name="button_add_exercise">Add exercise</string>
    <string name="button_pick_date">Pick date</string>
    <string name="button_add_session">Add set</string>

    <string name="radio_button_new_exercise_weight_based">weight-based</string>
    <string name="radio_button_new_exercise_time_based">time-based</string>

    <string name="EXTRA_EXERCISE">com.baertiger_baer.gymcoachbob.extra.exercise</string>
    <string name="EXTRA_EXERCISE_POSITION">com.baertiger_baer.gymcoachbob.extra.exercise_position</string>
    <string name="EXTRA_SESSION">com.baertiger_baer.gymcoachbob.extra.session</string>
    <string name="EXTRA_LAST_WEIGHT">com.baertiger_baer.gymcoachbob.extra.last_weight</string>
    <string name="EXTRA_LAST_REPETITIONS">com.baertiger_baer.gymcoachbob.extra.last_repetitions</string>
    <string name="EXTRA_LAST_DATE">com.baertiger_baer.gymcoachbob.extra.last_date</string>

    <string name="json_version_code">versionCode</string>
    <string name="json_exercise_name">name</string>
    <string name="json_exercise_type">type</string>
    <string name="json_exercise_list">exercises</string>
    <string name="json_exercise_session_list">sessions</string>
    <string name="json_session_date">date</string>
    <string name="json_session_repetitions">repetitions</string>
    <string name="json_session_weight">weight</string>
    <string name="json_session_time">time</string>

    <string name="text_new_session_weight">Weight</string>
    <string name="text_new_session_repetitions">Repetitions</string>
    <string name="text_new_session_time">Time</string>
    <string name="text_new_session_distance">Distance</string>

    <string name="file_exercises">exercises.json</string>

    <string name="menu_context_delete_exercise">Delete</string>

    <string name="activity_view_exercise_textview_date">Date</string>
    <string name="activity_view_exercise_textview_weight">Weight</string>
    <string name="activity_view_exercise_textview_repetitions">Repetition(s)</string>
    <string name="activity_view_exercise_textview_time">Time</string>
    <string name="activity_view_exercise_textview_number">#</string>

    <string name="activity_view_empty_exercise_description">This is an empty exercise.\n\nTap plus to add a set.</string>
    <string name="activity_main_empty_description">Welcome to gymcoachbob.\n\n\nTap plus to add a new exercise.\n\nTap an exercise to open it.\n\nTap and hold an exercise to mark it for deletion.</string>

    <string name="activity_new_session_picked_date">%1$s\n%2$s</string>

    <string name="alert_delete_exercise_title">Delete</string>
    <string name="alert_delete_exercise_message">This exercise and all associated sets will be removed and can not be recovered.</string>
    <string name="alert_delete_exercise_okay">Delete</string>
    <string name="alert_delete_exercise_cancel">Cancel</string>
    <string name="alert_import_exercise_title">Exercise import</string>
    <string name="alert_import_exercise_message">Import exercises from external storage? This will replace all existing exercises and all associated sets and can not be undone.</string>
    <string name="alert_import_exercise_okay">Import</string>
    <string name="alert_import_exercise_cancel">Cancel</string>

    <string name="time_today">Today</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_future">In the future</string>
    <string name="time_days_ago">days ago</string>
    <string name="time_never">Never</string>
</resources>
