<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.dermobbbda.gymcoachbob.NewExerciseActivity">

    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_exercise_name"
        android:inputType="textCapWords" >
        <requestFocus />
    </EditText>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_new_exercise_weight_based"
        android:layout_below="@id/exercise_name"
        android:layout_marginTop="@dimen/margin_small"
        android:id="@+id/radio_group_new_exercise" >

        <RadioButton
            android:id="@id/radio_button_new_exercise_weight_based"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_new_exercise_weight_based"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_button_new_exercise_time_based"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_new_exercise_time_based"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_new_exercise"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/button_add_exercise"
        android:onClick="addExercise"/>
</RelativeLayout>
