<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.dermobbbda.gymcoachbob.NewSessionActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_session_date_picker_button"
        android:text="@string/button_pick_date"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_session_weight_text"
        android:text="@string/text_new_session_weight"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_below="@id/new_session_date_picker_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_session_repetitions_text"
        android:text="@string/text_new_session_repetitions"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_toRightOf="@id/new_session_weight_text"
        android:layout_below="@id/new_session_date_picker_button" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_session_weight_picker"
        android:layout_alignLeft="@id/new_session_weight_text"
        android:layout_below="@id/new_session_weight_text" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_session_repetitions_picker"
        android:layout_alignLeft="@id/new_session_repetitions_text"
        android:layout_below="@id/new_session_repetitions_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_session_weight_picker"
        android:text="@string/button_add_session"
        android:onClick="addSession"/>

</RelativeLayout>