<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dermobbbda.gymcoachbob.ViewExerciseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_exercise_textview_date"
        android:text="@string/activity_view_exercise_textview_date"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_exercise_textview_weight"
        android:text="@string/activity_view_exercise_textview_weight"
        android:layout_toRightOf="@id/view_exercise_textview_date"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_exercise_textview_repetitions"
        android:text="@string/activity_view_exercise_textview_repetitions"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_toRightOf="@id/view_exercise_textview_weight"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/view_exercise_recyclerview"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_exercise_textview_date"/>

</RelativeLayout>
